# WebsiteScraper

./: .gitignore  README.md  app.py  db.py  models.py  pyproject.toml  swagger.yaml
models/: __init__.py  db_models.py  models.py
scrapper/: __init__.py  website_scraper.py
tests/: test_main_app.py
